--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e3c998">  <td>20/11/20 13:10:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerDemo.ArrayMulti()[pri:0, instance:com.TestNGListeners.ListnerDemo@76f2b07d]">ArrayMulti</td> 
-  <td>main@926370398</td>   <td></td> </tr>
-<tr bgcolor="e3c998">  <td>20/11/20 13:10:19</td>   <td>20</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerDemo.test1()[pri:0, instance:com.TestNGListeners.ListnerDemo@76f2b07d]">test1</td> 
-  <td>main@926370398</td>   <td></td> </tr>
-<tr bgcolor="e3c998">  <td>20/11/20 13:10:19</td>   <td>27</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerDemo.test2()[pri:0, instance:com.TestNGListeners.ListnerDemo@76f2b07d]">test2</td> 
-  <td>main@926370398</td>   <td></td> </tr>
-<tr bgcolor="e3c998">  <td>20/11/20 13:10:27</td>   <td>7365</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerDemo.test3()[pri:0, instance:com.TestNGListeners.ListnerDemo@76f2b07d]">test3</td> 
-  <td>main@926370398</td>   <td></td> </tr>
+<tr bgcolor="e3c998">  <td>20/12/29 13:51:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGMultipleBrowsers.test1()[pri:0, instance:net.IdeTest.TestNGMultipleBrowsers@305fd85d]">test1</td> 
+  <td>main@1597655940</td>   <td></td> </tr>
+<tr bgcolor="e3c998">  <td>20/12/29 13:51:39</td>   <td>8</td> <td>&nbsp;</td><td title="&lt;&lt;TestNGMultipleBrowsers.teardown()[pri:0, instance:net.IdeTest.TestNGMultipleBrowsers@305fd85d]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
 </table>
