--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e3c998">  <td>20/12/29 14:10:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGDependencies.test04()[pri:0, instance:TestNGSample.TestNGDependencies@33f88ab]">test04</td> 
-  <td>main@1970881185</td>   <td></td> </tr>
-<tr bgcolor="e3c998">  <td>20/12/29 14:10:56</td>   <td>20</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGDependencies.test02()[pri:1, instance:TestNGSample.TestNGDependencies@33f88ab]">test02</td> 
-  <td>main@1970881185</td>   <td></td> </tr>
-<tr bgcolor="e3c998">  <td>20/12/29 14:10:56</td>   <td>28</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGDependencies.test03()[pri:2, instance:TestNGSample.TestNGDependencies@33f88ab]">test03</td> 
-  <td>main@1970881185</td>   <td></td> </tr>
-<tr bgcolor="e3c998">  <td>20/12/29 14:10:56</td>   <td>36</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGDependencies.test01()[pri:0, instance:TestNGSample.TestNGDependencies@33f88ab]">test01</td> 
-  <td>main@1970881185</td>   <td></td> </tr>
+<tr bgcolor="e3c998">  <td>21/02/16 22:37:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerDemo.ArrayMulti()[pri:0, instance:com.TestNGListeners.ListnerDemo@76f2b07d]">ArrayMulti</td> 
+  <td>main@926370398</td>   <td></td> </tr>
+<tr bgcolor="e3c998">  <td>21/02/16 22:37:01</td>   <td>37</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerDemo.test1()[pri:0, instance:com.TestNGListeners.ListnerDemo@76f2b07d]">test1</td> 
+  <td>main@926370398</td>   <td></td> </tr>
+<tr bgcolor="e3c998">  <td>21/02/16 22:37:01</td>   <td>58</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerDemo.test2()[pri:0, instance:com.TestNGListeners.ListnerDemo@76f2b07d]">test2</td> 
+  <td>main@926370398</td>   <td></td> </tr>
+<tr bgcolor="e3c998">  <td>21/02/16 22:37:18</td>   <td>16480</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerDemo.test3()[pri:0, instance:com.TestNGListeners.ListnerDemo@76f2b07d]">test3</td> 
+  <td>main@926370398</td>   <td></td> </tr>
 </table>
