--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,10 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="80ebad">  <td>20/03/07 02:04:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGroupsDemo.test01()[pri:0, instance:net.IdeTest.TestNGroupsDemo@f6c48ac]">test01</td> 
-  <td>main@1383547042</td>   <td></td> </tr>
-<tr bgcolor="80ebad">  <td>20/03/07 02:04:18</td>   <td>22</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGroupsDemo.test02()[pri:0, instance:net.IdeTest.TestNGroupsDemo@f6c48ac]">test02</td> 
-  <td>main@1383547042</td>   <td></td> </tr>
-<tr bgcolor="80ebad">  <td>20/03/07 02:04:18</td>   <td>31</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGroupsDemo.test03()[pri:0, instance:net.IdeTest.TestNGroupsDemo@f6c48ac]">test03</td> 
-  <td>main@1383547042</td>   <td></td> </tr>
+<tr bgcolor="9b7070">  <td>21/02/16 19:39:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ABtest.f()[pri:0, instance:TestNGSample.ABtest@4d50efb8]">f</td> 
+  <td>main@1113619023</td>   <td></td> </tr>
+<tr bgcolor="9768b3">  <td>21/02/16 19:40:02</td>   <td>57189</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGDependencies.test04()[pri:0, instance:TestNGSample.TestNGDependencies@7e2d773b]">test04</td> 
+  <td>main@1113619023</td>   <td></td> </tr>
+<tr bgcolor="759b6d">  <td>21/02/16 19:40:02</td>   <td>57205</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerWaitElement.test6()[pri:0, instance:com.TestNGListeners.ListnerWaitElement@467aecef]">test6</td> 
+  <td>main@1113619023</td>   <td></td> </tr>
+<tr bgcolor="759b6d">  <td>21/02/16 19:40:15</td>   <td>69510</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerWaitElement.test7()[pri:0, instance:com.TestNGListeners.ListnerWaitElement@467aecef]">test7</td> 
+  <td>main@1113619023</td>   <td></td> </tr>
+<tr bgcolor="759b6d">  <td>21/02/16 19:40:49</td>   <td>104432</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerWaitElement.test9()[pri:0, instance:com.TestNGListeners.ListnerWaitElement@467aecef]">test9</td> 
+  <td>main@1113619023</td>   <td></td> </tr>
+<tr bgcolor="9768b3">  <td>21/02/16 19:40:49</td>   <td>104432</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGDependencies.test02()[pri:1, instance:TestNGSample.TestNGDependencies@7e2d773b]">test02</td> 
+  <td>main@1113619023</td>   <td></td> </tr>
+<tr bgcolor="9768b3">  <td>21/02/16 19:40:49</td>   <td>104448</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGDependencies.test03()[pri:2, instance:TestNGSample.TestNGDependencies@7e2d773b]">test03</td> 
+  <td>main@1113619023</td>   <td></td> </tr>
+<tr bgcolor="9768b3">  <td>21/02/16 19:40:49</td>   <td>104448</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGDependencies.test01()[pri:0, instance:TestNGSample.TestNGDependencies@7e2d773b]">test01</td> 
+  <td>main@1113619023</td>   <td></td> </tr>
+<tr bgcolor="9d62cb">  <td>21/02/16 19:40:49</td>   <td>104448</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerDemo.ArrayMulti()[pri:0, instance:com.TestNGListeners.ListnerDemo@3dfc5fb8]">ArrayMulti</td> 
+  <td>main@1113619023</td>   <td></td> </tr>
+<tr bgcolor="9d62cb">  <td>21/02/16 19:40:49</td>   <td>104463</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerDemo.test1()[pri:0, instance:com.TestNGListeners.ListnerDemo@3dfc5fb8]">test1</td> 
+  <td>main@1113619023</td>   <td></td> </tr>
+<tr bgcolor="9d62cb">  <td>21/02/16 19:40:49</td>   <td>104463</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerDemo.test2()[pri:0, instance:com.TestNGListeners.ListnerDemo@3dfc5fb8]">test2</td> 
+  <td>main@1113619023</td>   <td></td> </tr>
+<tr bgcolor="9d62cb">  <td>21/02/16 19:40:54</td>   <td>109022</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerDemo.test3()[pri:0, instance:com.TestNGListeners.ListnerDemo@3dfc5fb8]">test3</td> 
+  <td>main@1113619023</td>   <td></td> </tr>
 </table>
